renew all scripts

--- a/storage/https/blog.conf
+++ b/storage/https/blog.conf
@@ -1,58 +1,78 @@
-upstream mainsite_upstream {
-  server 127.0.0.1:3000;
-  keepalive 64;
-}
-
 server {
   listen 80 default_server;
-  listen [::]:80 default_server;
-  listen 443 ssl http2 default_server;
-  listen [::]:443 ssl http2 default_server;
-
-  server_name lazts.com;
-  return 301 https://www.lazts.com$request_uri;
+  listen [::]:80 default_server ipv6only=on;
+  server_name lazts.com www.lazts.com;
+  return 301 https://$server_name$request_uri;
 }
 
 server {
-  listen 80 default_server;
-  listen [::]:80 default_server;
+  listen 443 ssl default_server;
+  listen [::]:443 ssl default_server;
 
-  server_name www.lazts.com;
-  return 301 https://www.lazts.com$request_uri;
-}
-
-server {
-  listen 443 ssl http2 default_server;
-  listen [::]:443 ssl http2 default_server;
-  
-  server_name www.lazts.com;
-  root /var/www/html;
-
-  include snippets/ssl-lazts.com.conf;
+  include snippets/ssl-www.lazts.com.conf;
   include snippets/ssl-params.conf;
 
-  location ~ ^/(images/|img/|javascript/|js/|css/|stylesheets/|flash/|media/|static/|robots.txt|humans.txt|favicon.ico) {
-    root /var/www/blog/build;
+  root /var/www/blog/build;
+  index index.html index.htm;
+
+  server_name lazts.com www.lazts.com;
+  access_log logs/lazts.access.log  main;
+
+  # Prevent clients from accessing hidden files (starting with a dot)
+  location ~* /\.(?!well-known\/) {
+    deny all;
+  }
+
+  # Prevent clients from accessing to backup/config/source files
+  location ~* (?:\.(?:bak|conf|dist|fla|in[ci]|log|psd|sh|sql|sw[op])|~)$ {
+    deny all;
+  }
+
+  location /robots.txt {
+    alias /var/www/html/robots.txt;
+  }
+
+  location /sitemap.xml {
+    alias /var/www/html/sitemap.xml;
+  }
+
+  # Media: images, icons, video, audio, HTC
+  location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|mp4|ogg|ogv|webm|htc)$ {
     access_log off;
-    expires max;
+    add_header Cache-Control "max-age=2592000";
+  }
+
+  # Media: svgz files are already compressed.
+  location ~* \.svgz$ {
+    access_log off;
+    gzip off;
+    add_header Cache-Control "max-age=2592000";
+  }
+
+  # CSS and Javascript
+  location ~* \.(?:css|js)$ {
+    add_header Cache-Control "max-age=31536000";
+    access_log off;
+  }
+
+  # WebFonts
+  location ~* \.(?:ttf|ttc|otf|eot|woff|woff2)$ {
+    add_header Cache-Control "max-age=2592000";
+    access_log off;
   }
 
   location / {
-    proxy_redirect off;
-    proxy_set_header  X-Real-IP  $remote_addr;
-    proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
-    roxy_set_header  X-Forwarded-Proto  $scheme;
-    proxy_set_header  Host  $http_host;
-    proxy_set_header  X-NginX-Proxy  true;
-    proxy_set_header  Connection  "";
-    proxy_http_version 1.1;
-    proxy_set_header  Upgrade  $http_upgrade;
-    proxy_set_header  Connection  "upgrade";
-    proxy_max_temp_file_size 0;
-    proxy_cache  one;
-    proxy_cache_key  sfs$request_uri$scheme;
-    proxy_pass  http://mainsite_upstream/;
-    proxy_redirect  off;
-    proxy_read_timeout  240s;
+    proxy_redirect          off;
+    proxy_set_header        X-Real-IP  $remote_addr;
+    proxy_set_header        X-Forwarded-For  $proxy_add_x_forwarded_for;
+    proxy_set_header        Host  $host;
+    client_max_body_size    10m;
+    client_body_buffer_size 128k;
+    proxy_connect_timeout   90;
+    proxy_send_timeout      90;
+    proxy_read_timeout      90;
+    proxy_buffers           32 4k;
+
+    try_files $uri $uri/ /index.html?/$request_uri;
   }
 }
