--- a/storage/nginx.conf
+++ b/storage/nginx.conf
@@ -30,9 +30,9 @@ http {
   ##
   # SSL Settings
   ##
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
-  ssl_ciphers HIGH:!aNULL:!MD5;
-  ssl_prefer_server_ciphers on;
+  # ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
+  # ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+  # ssl_prefer_server_ciphers on;
 
   ##
   # Logging Settings
@@ -48,11 +48,11 @@ http {
 
   gzip_vary on;
   gzip_proxied any;
-  gzip_comp_level 6;
+  gzip_comp_level 5;
   gzip_buffers 16 8k;
   gzip_http_version 1.1;
-  gzip_types text/plain text/html text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-  gzip_min_length  1000;
+  gzip_types text/plain text/html text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
+  gzip_min_length  256;
 
   ##
   # Virtual Host Configs
