--- a/storage/http/allow.conf
+++ b/storage/http/allow.conf
@@ -8,7 +8,7 @@ server {
   server_name www.lazts.com;
 
   location / {
-    try_files $uri $uri/ =404;
+    try_files $uri $uri/ /index.html?/$request_uri;
   }
 
   location ~ /.well-known {
