--- a/storage/snippets/ssl-lazts.com.conf
+++ b/storage/snippets/ssl-lazts.com.conf
@@ -1,2 +1,2 @@
-ssl_certificate /etc/letsencrypt/live/lazts.com/fullchain.pem;
-ssl_certificate_key /etc/letsencrypt/live/lazts.com/privkey.pem;
+ssl_certificate /etc/letsencrypt/live/www.lazts.com/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/www.lazts.com/privkey.pem;
