--- a/storage/nginx.conf
+++ b/storage/nginx.conf
@@ -51,7 +51,7 @@ http {
   gzip_comp_level 5;
   gzip_buffers 16 8k;
   gzip_http_version 1.1;
-  gzip_types text/plain text/html text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
+  gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
   gzip_min_length  256;
 
   ##
