--- a/storage/https/blog.conf
+++ b/storage/https/blog.conf
@@ -2,7 +2,7 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server ipv6only=on;
   server_name lazts.com www.lazts.com;
-  return 301 https://$server_name$request_uri;
+  return 301 https://www.lazts.com$request_uri;
 }
 
 server {
